--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "private": true,
   "license": "MIT",
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "devDependencies": {
-    "eslint-config-dave": "^1.0.0"
+    "eslint": "^5.12.1",
+    "eslint-config-dave": "^1.0.2"
   }
 }
