--- a/easy-web-input/package.json
+++ b/easy-web-input/package.json
@@ -1,8 +1,29 @@
 {
   "name": "easy-web-input",
-  "version": "1.0.0",
-  "description": "An easier way to query for input in web games.",
-  "main": "index.js",
-  "types": "index.d.ts",
-  "author": "Dave Caruso <dave@davecode.me>"
+  "version": "2.0.1",
+  "description": "Starter for a library written in TypeScript using rollup, and an extra webpack config for development.",
+  "main": "dist/index.js",
+  "types": "dist/index.d.js",
+  "scripts": {
+    "start": "webpack-dev-server",
+    "build": "rollup -c",
+    "watch": "rollup -c -w"
+  },
+  "author": "",
+  "devDependencies": {
+    "fork-ts-checker-webpack-plugin": "^1.5.0",
+    "html-webpack-plugin": "^3.2.0",
+    "rollup": "^1.20.1",
+    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^5.1.1",
+    "rollup-plugin-typescript2": "^0.23.0",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.3",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
+  },
+  "files": ["dist","readme.md"],
+  "dependencies": {}
 }
